--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Moi</h2>
-        <p>Je suis un jeune étudiant de 18 ans passionné par l’informatique, animé par la curiosité et la détermination. Mon objectif est de progresser chaque jour dans ce domaine en développant mes compétences et en me préparant à une carrière réussie dans le numérique.</p>
+        <p>Je suis un jeune étudiant de 19 ans passionné par l’informatique, animé par la curiosité et la détermination. Mon objectif est de progresser chaque jour dans ce domaine en développant mes compétences et en me préparant à une carrière réussie dans le numérique.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -101,18 +101,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Anniversaire:</strong> <span>8 Février 2007</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>nathanan07.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Téléphone:</strong> <span>06.24.08.99.09</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Saint-Fargeau-Ponthierry, France</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Anniversaire:</strong> <span>08/02/2007</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>https://github.com/Nathanan07</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Statut:</strong> <span>Étudiant</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Âge:</strong> <span>18</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Âge:</strong> <span>19</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degrès:</strong>1ère année de BTS SIO<span> </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nsongcharoenkul@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Statut:</strong> <span>Étudiant</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span>https://www.linkedin.com/in/nathanan-songcharoenkul-0a671b386/</span></li>
                 </ul>
               </div>
             </div>
@@ -144,11 +142,10 @@
 
             <div class="resume-item pb-0">
               <h4>Nathanan Songcharoenkul</h4>
-              <p><em>Jeune étudiant de 18 ans en BTS Services Informatiques aux Organisations, option développement et réseau, je suis titulaire d’un baccalauréat général spécialités Mathématiques et Numérique & Sciences Informatiques obtenu au lycée Joliot-Curie, et je souhaite mettre mes compétences en informatique au service de projets concrets et innovants.</em></p>
+              <p><em>Jeune étudiant de 19 ans en BTS Services Informatiques aux Organisations, option développement et réseau, je suis titulaire d’un baccalauréat général spécialités Mathématiques et Numérique & Sciences Informatiques obtenu au lycée Joliot-Curie, et je souhaite mettre mes compétences en informatique au service de projets concrets et innovants.</em></p>
               <ul>
                 <li>Sur Melun 77000</li>
-                <li>06.24.08.99.09</li>
-                <li>nsongcharoenkul@gmail.com</li>
+                <li>1ère année</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -208,7 +205,7 @@
 
       </div>
 
-      <button id="telechargement"><a href="CV_NATHANAN_SONG.pdf" download target="_blank"><ion-icon name="download-outline" size="large"></ion-icon></a><span></span></button>
+      <button id="telechargement"><a href="NATHANAN_SONGCHAROENKUL_CV.pdf" download target="_blank"><ion-icon name="download-outline" size="large"></ion-icon></a><span></span></button>
 
     </section><!-- /Resume Section -->
 
@@ -220,6 +217,7 @@
         <h2>Contact</h2>
         <p>Merci de me contacter. Je reste à votre disposition pour une quelconque question ou renseignement.</p>
       </div><!-- End Section Title -->
+      <!-- Enlever tout les infos sur moi-->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -240,7 +238,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Appelez-moi</h3>
-                  <p>06.24.08.99.09</p>
+                  <p>06.XX.XX.XX.XX</p>
                 </div>
               </div><!-- End Info Item -->
 
